--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 * {
     color: #eeeeee;
     font-family: 'Montserrat', sans-serif;
@@ -15,6 +19,7 @@ body {
 
 .title {
     float: left;
+    margin-left:1vmin;
 }
 
 .title h1 {
@@ -27,22 +32,24 @@ body {
 .title h2 {
     font-size: 1.5vmin;
     margin-top: 0;
+    text-align: center;
 }
 
-#twitter-icon {
+.icons {
     float: right;
     width: 4vmin;
+    margin-top: 0.5%;
+    margin-right: 2%;
 }
 
 .showreel {
-    margin-top: 7vmin;
     width: 100%;
     height: 60vmin;
 }
 
 .client-area {
     text-align: center;
-    margin-top:40vmin;
+    margin-top: 40vmin;
 }
 
 .thin-title {
@@ -70,6 +77,7 @@ body {
     height: 70vmin;
     margin-top: 6.5vmin;
     margin-bottom: 12vmin;
+    width: 50%
 }
 
 .video-grid .row {
@@ -95,7 +103,7 @@ body {
 }
 
 .text-container {
-    margin-top:1%;
+    margin-top: 1%;
     display: inline-block;
 }
 
@@ -108,8 +116,8 @@ body {
 }
 
 .features-text ul {
-    width:50%;
-    float:left;
+    width: 50%;
+    float: left;
     text-align: center;
 }
 
@@ -130,6 +138,7 @@ body {
     font-style: italic;
     font-weight: 300;
 }
+
 /* Media Query Section */
 
 @media only screen and (max-width: 1200px) {
@@ -163,4 +172,47 @@ body {
     .client-area h2 {
         font-size: 3vmin;
     }
+}
+
+nav {
+    background-color: #34495e;
+}
+
+#navbar {
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    height: 8vmin;
+    padding: 0.5vmin;
+    background-color:#2a2a2a;
+}
+
+.scrollToOffset {
+    padding-top: 3em;
+    margin-top: -2em;
+}
+
+hr {
+    width: 50%;
+    position: relative;
+    top: 2em;
+}
+
+.video-grid-text {
+    width: 48%;
+    float: right;
+    padding: 3%;
+}
+
+.video-grid-text h2 {
+    margin-top: 1%;
+}
+
+.video-grid-text a {
+    color: white;
+}
+
+.nav-list {
+    margin-left: 40%
 }
