--- a/css/custom.css
+++ b/css/custom.css
@@ -5,6 +5,8 @@
 
 html {
     scroll-behavior: smooth;
+    margin:0;
+    padding:0
 }
 
 * {
@@ -14,6 +16,10 @@ html {
 
 body {
     background-color: #050505;
+    overflow-y: scroll;
+    padding: 0;
+    margin: 0;
+    width: 100%;
 }
 
 .master-container {
