--- a/css/custom.css
+++ b/css/custom.css
@@ -5,8 +5,8 @@
 
 html {
     scroll-behavior: smooth;
-    margin:0;
-    padding:0
+    margin: 0;
+    padding: 0
 }
 
 * {
@@ -30,7 +30,7 @@ body {
 
 .title {
     float: left;
-    margin-left:1vmin;
+    margin-left: 1vmin;
 }
 
 .title h1 {
@@ -97,6 +97,10 @@ body {
 
 .video-grid .row .video-container {
     height: 100%;
+}
+
+.video-grid-paragraph {
+    font-size: 14px !important;
 }
 
 .video-container iframe {
@@ -177,8 +181,12 @@ body {
     nav a {
         display: none;
     }
+}
 
-
+@media only screen and (max-width: 500px) {
+    .video-grid-paragraph {
+        font-size: 20px !important;
+    }
 }
 
 @media only screen and (max-height: 900px) {
@@ -204,7 +212,7 @@ nav {
     z-index: 100;
     height: 8vmin;
     padding: 0.5vmin;
-    background-color:#2a2a2a;
+    background-color: #2a2a2a;
 }
 
 .scrollToOffset {
@@ -241,6 +249,6 @@ hr {
 }
 
 .workarea {
-    float:left;
+    float: left;
     width: 100%;
 }
